# actix-web1

./: .gitignore  Cargo.toml  README.md  run.sh
docs/: 1.notes.md
src/: main.rs
src/app/: mod.rs
src/app/common/: response.rs
src/app/libs/: logger.rs
src/app/middleware/: mod.rs  simple_middleware.rs
src/app/services/article/: article.rs
