[package]
name = "actix-web1"
version = "0.1.0"
authors = ["suhanyujie <suhanyujie@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
serde = "1.0.106"
futures = "0.3.4"
serde_json = "1.0.51"
actix-service = "1.0.5"
log = "0.4.8"
chrono = "0.4.11"
env_logger = "0.7.1"
failure = "0.1.7"
